# realbot

./: .gitattributes  .gitignore  .railwayignore  .releaserc.json  BUG-FIXES-SUMMARY.md  CARD-HOLDER-REDESIGN-TODO.md  CHANGELOG.md  CLAUDE.md  LICENSE  PRIVACY_POLICY.md  Procfile  RAILWAY-POSTGRESQL-SETUP.md  README.md  RELEASE_HISTORY.md  TESTER_EMAIL_TEMPLATE.md  TESTER_GUIDE.md  TODO.md  build.gradle.kts  build_log.txt  check_encoding.js  compile_log.txt  fix_domain.js  fix_encoding.js  generate_play_assets.py  google-services.json  gradle.properties  gradle.properties.bak  gradlew  mockup_ai_fab.html  nixpacks.toml  package-lock.json  package.json  plan.md  poster.py  preview_lobster.html  process_icons.py  railway.json  secrets.7z  settings.gradle.kts  test_anim_limbs.js  (+4 more)
.claude/: settings.json  settings.local.json  setup.sh
app/: build.gradle.kts  debug.keystore  release-key.jks
backend/: .deploy-trigger  .env.example  .eslintignore  .gitignore  E-claw_mcp_skill.md  README.md  TEST-README.md  ai-support.js  anthropic-client.js  article-publisher.js  auth.js  auth_schema.sql  bot-tools.js  channel-api.js  chat-integrity.js  db.js  delete_test_log.txt  device-feedback.js  device-preferences.js  device-telemetry.js  entity-cross-device-settings.js  eslint.config.js  feedback-email.js  flickr-auth.js  flickr.js  gatekeeper.js  index.js  jest.config.js  mission.js  mission_schema.sql  monitor_messages.js  (+28 more)
claude-cli-proxy/: .env.example  .gitignore  Dockerfile  db-query.js  db_query.py  index.js  package.json  proxy.py  pyproject.toml  railway.json  requirements.txt
(+498 files in other folders)
